Use JDK11 when building databinding
AGP requires JDK11+ in order to run successfully,
so make sure to use that version when testing
data-binding.

Bug: 169923330
Test: building data-binding
Change-Id: I623cd456f506eb934b87e4faf3f6afd1b6674d9e